# src/domain/schemas/create-user.schema.ts
@@ -1,0 +1,9 @@
+import { IsString } from "class-validator"
+
+export class CreateUserSchema {
+    @IsString()
+    name: string
+
+    @IsString()
+    password: string
+}
