# swagger.yml
@@ -1,5 +1,15 @@
 components:
   schemas:
+    CreateUserSchema:
+      properties:
+        name:
+          type: string
+        password:
+          type: string
+      type: object
+      required:
+        - name
+        - password
     PaginationSchema:
       properties:
         page:
@@ -59,6 +69,32 @@ paths:
       tags:
         - User
       description: "This route list users by user company_id "
+  /user/create/{companyId}:
+    post:
+      operationId: UserController.create
+      parameters:
+        - in: path
+          name: companyId
+          required: true
+          schema:
+            pattern: "[^\\/#\\?]+?"
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateUserSchema"
+        description: CreateUserSchema
+        required: false
+      responses:
+        "200":
+          content:
+            application/json: {}
+          description: Successful response
+      summary: List Users
+      tags:
+        - User
+      description: This route list users by user company_id
 servers:
   - url: http://localhost:8080
     description: Development
